src/interpreter/HLL1Parser.java
// $ANTLR 3.5 interpreter/HLL1.g 2013-06-12 17:19:54
package interpreter;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class HLL1Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCESS_INVOCATION", "ALL", "ARGUMENTS", 
		"ASSIGNMENT", "BLOCK", "BooleanLiteral", "COMMENT", "CONDITIONAL_EXPRESSION", 
		"CONTAINS_INVOCATION", "DISTINCT_PROCESSES", "ELSE", "ENUM_DECLARATION", 
		"EXPRESSION", "FILTER_INVOCATION", "FOR", "FOREACH", "FOREACH_CONTROL", 
		"FOR_CONTROL", "HALT", "ID", "IF", "INIT_BLOCK", "INSERT_INVOCATION", 
		"INVOCATION", "Identifier", "IntegerLiteral", "LAMBDA_EXPRESSION", "LOCAL_VARIABLE", 
		"NONDET_INIT", "NONDET_RANGE_INIT", "PRIMARY", "PRIMITIVE_TYPE", "PROC_COUNT", 
		"PROC_ID", "PrimitiveType", "RECEIVE", "RECEIVE_BLOCK", "REMOVE_INVOCATION", 
		"SEND", "SET_DECLARATION", "SET_INVOCATION", "SIGNATUR", "SIZE_INVOCATION", 
		"STEP_BLOCK", "UNARY_EXPRESSION", "VARIABLES_BLOCK", "VARIABLE_DECLARATION", 
		"VARIABLE_INIT", "WS", "'!'", "'!='", "'%'", "'%='", "'('", "')'", "'*'", 
		"'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'.'", "'..'", 
		"'...'", "'/'", "'/='", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", 
		"'>='", "'INIT'", "'INITIALISATION'", "'INITIALIZATION'", "'Init'", "'Initialisation'", 
		"'Initialization'", "'PROC_COUNT'", "'PROC_ID'", "'ProcCount'", "'ProcId'", 
		"'RECEIVE'", "'Receive'", "'STEP'", "'Set'", "'Step'", "'VARIABLES'", 
		"'Variables'", "'['", "']'", "'all'", "'and'", "'contains'", "'distinct processes'", 
		"'else'", "'enum'", "'filter'", "'for'", "'foreach'", "'from'", "'halt'", 
		"'if'", "'in'", "'init'", "'initialisation'", "'initialization'", "'insert'", 
		"'let'", "'on receive'", "'or'", "'receive'", "'remove'", "'send'", "'size'", 
		"'some'", "'step'", "'then'", "'to'", "'variables'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int T__108=108;
	public static final int T__109=109;
	public static final int T__110=110;
	public static final int T__111=111;
	public static final int T__112=112;
	public static final int T__113=113;
	public static final int T__114=114;
	public static final int T__115=115;
	public static final int T__116=116;
	public static final int T__117=117;
	public static final int T__118=118;
	public static final int T__119=119;
	public static final int T__120=120;
	public static final int T__121=121;
	public static final int T__122=122;
	public static final int T__123=123;
	public static final int T__124=124;
	public static final int T__125=125;
	public static final int T__126=126;
	public static final int T__127=127;
	public static final int T__128=128;
	public static final int T__129=129;
	public static final int T__130=130;
	public static final int ACCESS_INVOCATION=4;
	public static final int ALL=5;
	public static final int ARGUMENTS=6;
	public static final int ASSIGNMENT=7;
	public static final int BLOCK=8;
	public static final int BooleanLiteral=9;
	public static final int COMMENT=10;
	public static final int CONDITIONAL_EXPRESSION=11;
	public static final int CONTAINS_INVOCATION=12;
	public static final int DISTINCT_PROCESSES=13;
	public static final int ELSE=14;
	public static final int ENUM_DECLARATION=15;
	public static final int EXPRESSION=16;
	public static final int FILTER_INVOCATION=17;
	public static final int FOR=18;
	public static final int FOREACH=19;
	public static final int FOREACH_CONTROL=20;
	public static final int FOR_CONTROL=21;
	public static final int HALT=22;
	public static final int ID=23;
	public static final int IF=24;
	public static final int INIT_BLOCK=25;
	public static final int INSERT_INVOCATION=26;
	public static final int INVOCATION=27;
	public static final int Identifier=28;
	public static final int IntegerLiteral=29;
	public static final int LAMBDA_EXPRESSION=30;
	public static final int LOCAL_VARIABLE=31;
	public static final int NONDET_INIT=32;
	public static final int NONDET_RANGE_INIT=33;
	public static final int PRIMARY=34;
	public static final int PRIMITIVE_TYPE=35;
	public static final int PROC_COUNT=36;
	public static final int PROC_ID=37;
	public static final int PrimitiveType=38;
	public static final int RECEIVE=39;
	public static final int RECEIVE_BLOCK=40;
	public static final int REMOVE_INVOCATION=41;
	public static final int SEND=42;
	public static final int SET_DECLARATION=43;
	public static final int SET_INVOCATION=44;
	public static final int SIGNATUR=45;
	public static final int SIZE_INVOCATION=46;
	public static final int STEP_BLOCK=47;
	public static final int UNARY_EXPRESSION=48;
	public static final int VARIABLES_BLOCK=49;
	public static final int VARIABLE_DECLARATION=50;
	public static final int VARIABLE_INIT=51;
	public static final int WS=52;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public HLL1Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public HLL1Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[177+1];


	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return HLL1Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "interpreter/HLL1.g"; }


	public static class algorithm_toString_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "algorithm_toString"
	// interpreter/HLL1.g:60:1: algorithm_toString : algorithm ;
	public final HLL1Parser.algorithm_toString_return algorithm_toString() throws RecognitionException {
		HLL1Parser.algorithm_toString_return retval = new HLL1Parser.algorithm_toString_return();
		retval.start = input.LT(1);
		int algorithm_toString_StartIndex = input.index();

		CommonTree root_0 = null;

		ParserRuleReturnScope algorithm1 =null;


		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

			// interpreter/HLL1.g:60:19: ( algorithm )
			// interpreter/HLL1.g:61:2: algorithm
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_algorithm_in_algorithm_toString358);
			algorithm1=algorithm();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, algorithm1.getTree());

			if ( state.backtracking==0 ) {System.out.println(
			                (algorithm1!=null?((CommonTree)algorithm1.getTree()):null)==null?"null":(algorithm1!=null?((CommonTree)algorithm1.getTree()):null).toStringTree());}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, algorithm_toString_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "algorithm_toString"


	public static class algorithm_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "algorithm"
	// interpreter/HLL1.g:63:1: algorithm : declarationBlock initialBlock ( receiveBlock )? stepBlock ;
	public final HLL1Parser.algorithm_return algorithm() throws RecognitionException {
		HLL1Parser.algorithm_return retval = new HLL1Parser.algorithm_return();
		retval.start = input.LT(1);
		int algorithm_StartIndex = input.index();

		CommonTree root_0 = null;

		ParserRuleReturnScope declarationBlock2 =null;
		ParserRuleReturnScope initialBlock3 =null;
		ParserRuleReturnScope receiveBlock4 =null;
		ParserRuleReturnScope stepBlock5 =null;


		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// interpreter/HLL1.g:63:10: ( declarationBlock initialBlock ( receiveBlock )? stepBlock )
			// interpreter/HLL1.g:64:2: declarationBlock initialBlock ( receiveBlock )? stepBlock
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_declarationBlock_in_algorithm368);
			declarationBlock2=declarationBlock();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, declarationBlock2.getTree());

			pushFollow(FOLLOW_initialBlock_in_algorithm370);
			initialBlock3=initialBlock();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, initialBlock3.getTree());

			// interpreter/HLL1.g:64:32: ( receiveBlock )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( ((LA1_0 >= 91 && LA1_0 <= 92)||LA1_0==120) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// interpreter/HLL1.g:64:32: receiveBlock
					{
					pushFollow(FOLLOW_receiveBlock_in_algorithm372);
					receiveBlock4=receiveBlock();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, receiveBlock4.getTree());

					}
					break;

			}

			pushFollow(FOLLOW_stepBlock_in_algorithm375);
			stepBlock5=stepBlock();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, stepBlock5.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, algorithm_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "algorithm"


	public static class declarationBlock_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declarationBlock"
	// interpreter/HLL1.g:67:1: declarationBlock : ( 'Variables' | 'variables' | 'VARIABLES' ) ( ':' )? ( declaration )* -> ^( VARIABLES_BLOCK ( declaration )* ) ;
	public final HLL1Parser.declarationBlock_return declarationBlock() throws RecognitionException {
		HLL1Parser.declarationBlock_return retval = new HLL1Parser.declarationBlock_return();
		retval.start = input.LT(1);
		int declarationBlock_StartIndex = input.index();

		CommonTree root_0 = null;

		Token string_literal6=null;
		Token string_literal7=null;
		Token string_literal8=null;
		Token char_literal9=null;
		ParserRuleReturnScope declaration10 =null;

		CommonTree string_literal6_tree=null;
		CommonTree string_literal7_tree=null;
		CommonTree string_literal8_tree=null;
		CommonTree char_literal9_tree=null;
		RewriteRuleTokenStream stream_97=new RewriteRuleTokenStream(adaptor,"token 97");
		RewriteRuleTokenStream stream_96=new RewriteRuleTokenStream(adaptor,"token 96");
		RewriteRuleTokenStream stream_128=new RewriteRuleTokenStream(adaptor,"token 128");
		RewriteRuleTokenStream stream_73=new RewriteRuleTokenStream(adaptor,"token 73");
		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

			// interpreter/HLL1.g:67:17: ( ( 'Variables' | 'variables' | 'VARIABLES' ) ( ':' )? ( declaration )* -> ^( VARIABLES_BLOCK ( declaration )* ) )
			// interpreter/HLL1.g:68:2: ( 'Variables' | 'variables' | 'VARIABLES' ) ( ':' )? ( declaration )*
			{
			// interpreter/HLL1.g:68:2: ( 'Variables' | 'variables' | 'VARIABLES' )
			int alt2=3;
			switch ( input.LA(1) ) {
			case 97:
				{
				alt2=1;
				}
				break;
			case 128:
				{
				alt2=2;
				}
				break;
			case 96:
				{
				alt2=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// interpreter/HLL1.g:68:3: 'Variables'
					{
					string_literal6=(Token)match(input,97,FOLLOW_97_in_declarationBlock387); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_97.add(string_literal6);

					}
					break;
				case 2 :
					// interpreter/HLL1.g:68:17: 'variables'
					{
					string_literal7=(Token)match(input,128,FOLLOW_128_in_declarationBlock391); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_128.add(string_literal7);

					}
					break;
				case 3 :
					// interpreter/HLL1.g:68:31: 'VARIABLES'
					{
					string_literal8=(Token)match(input,96,FOLLOW_96_in_declarationBlock395); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_96.add(string_literal8);

					}
					break;

			}

			// interpreter/HLL1.g:68:44: ( ':' )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==73) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// interpreter/HLL1.g:68:44: ':'
					{
					char_literal9=(Token)match(input,73,FOLLOW_73_in_declarationBlock398); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_73.add(char_literal9);

					}
					break;

			}

			// interpreter/HLL1.g:68:49: ( declaration )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==Identifier||LA4_0==PrimitiveType||LA4_0==94||LA4_0==105) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// interpreter/HLL1.g:68:49: declaration
					{
					pushFollow(FOLLOW_declaration_in_declarationBlock401);
					declaration10=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_declaration.add(declaration10.getTree());
					}
					break;

				default :
					break loop4;
				}
			}

			// AST REWRITE
			// elements: declaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 68:62: -> ^( VARIABLES_BLOCK ( declaration )* )
			{
				// interpreter/HLL1.g:68:65: ^( VARIABLES_BLOCK ( declaration )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARIABLES_BLOCK, "VARIABLES_BLOCK"), root_1);
				// interpreter/HLL1.g:68:83: ( declaration )*
				while ( stream_declaration.hasNext() ) {
					adaptor.addChild(root_1, stream_declaration.nextTree());
				}
				stream_declaration.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, declarationBlock_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "declarationBlock"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// interpreter/HLL1.g:70:1: declaration : ( variableDeclaration ';' !| enumDeclaration ';' !| setDeclaration ';' !);
	public final HLL1Parser.declaration_return declaration() throws RecognitionException {
		HLL1Parser.declaration_return retval = new HLL1Parser.declaration_return();
		retval.start = input.LT(1);
		int declaration_StartIndex = input.index();

		CommonTree root_0 = null;

		Token char_literal12=null;
		Token char_literal14=null;
		Token char_literal16=null;
		ParserRuleReturnScope variableDeclaration11 =null;
		ParserRuleReturnScope enumDeclaration13 =null;
		ParserRuleReturnScope setDeclaration15 =null;

		CommonTree char_literal12_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree char_literal16_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

			// interpreter/HLL1.g:71:2: ( variableDeclaration ';' !| enumDeclaration ';' !| setDeclaration ';' !)
			int alt5=3;
			switch ( input.LA(1) ) {
			case Identifier:
			case PrimitiveType:
				{
				alt5=1;
				}
				break;
			case 105:
				{
				alt5=2;
				}
				break;
			case 94:
				{
				alt5=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// interpreter/HLL1.g:71:4: variableDeclaration ';' !
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_variableDeclaration_in_declaration421);
					variableDeclaration11=variableDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, variableDeclaration11.getTree());

					char_literal12=(Token)match(input,74,FOLLOW_74_in_declaration423); if (state.failed) return retval;
					}
					break;
				case 2 :
					// interpreter/HLL1.g:72:4: enumDeclaration ';' !
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_enumDeclaration_in_declaration429);
					enumDeclaration13=enumDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, enumDeclaration13.getTree());

					char_literal14=(Token)match(input,74,FOLLOW_74_in_declaration431); if (state.failed) return retval;
					}
					break;
				case 3 :
					// interpreter/HLL1.g:73:4: setDeclaration ';' !
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_setDeclaration_in_declaration437);
					setDeclaration15=setDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, setDeclaration15.getTree());

					char_literal16=(Token)match(input,74,FOLLOW_74_in_declaration439); if (state.failed) return retval;
					}
					break;

			}
			retval.stop = input.LT(-1);
